--- a/root.config
+++ b/root.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2016.11.1-00001-ga04df27 Configuration
+# Buildroot 2016.11.1-00002-g50c989f Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -213,13 +213,13 @@ BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 BR2_ROOTFS_DEVICE_TABLE_SUPPORTS_EXTENDED_ATTRIBUTES=y
 BR2_TARGET_ENABLE_ROOT_LOGIN=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="111111"
-BR2_SYSTEM_BIN_SH_BUSYBOX=y
-# BR2_SYSTEM_BIN_SH_BASH is not set
+# BR2_SYSTEM_BIN_SH_BUSYBOX is not set
+BR2_SYSTEM_BIN_SH_BASH=y
 # BR2_SYSTEM_BIN_SH_DASH is not set
 # BR2_SYSTEM_BIN_SH_MKSH is not set
 # BR2_SYSTEM_BIN_SH_ZSH is not set
 # BR2_SYSTEM_BIN_SH_NONE is not set
-BR2_SYSTEM_BIN_SH="busybox"
+BR2_SYSTEM_BIN_SH="bash"
 BR2_TARGET_GENERIC_GETTY=y
 BR2_TARGET_GENERIC_GETTY_PORT="console"
 BR2_TARGET_GENERIC_GETTY_BAUDRATE_KEEP=y
@@ -1945,7 +1945,7 @@ BR2_PACKAGE_BASH=y
 # BR2_PACKAGE_PINENTRY is not set
 # BR2_PACKAGE_RANGER is not set
 # BR2_PACKAGE_SCREEN is not set
-# BR2_PACKAGE_SUDO is not set
+BR2_PACKAGE_SUDO=y
 # BR2_PACKAGE_TIME is not set
 # BR2_PACKAGE_TMUX is not set
 # BR2_PACKAGE_WHICH is not set
